Complete DX602 homework 03

--- a/homework.ipynb
+++ b/homework.ipynb
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "id": "teDxcSlJnS34"
       },
@@ -99,7 +99,11 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p1(seq):\n",
-        "    ..."
+        "    result = []\n",
+        "    for item in seq:\n",
+        "        if item != None: \n",
+        "            result.append(item)\n",
+        "    return result"
       ]
     },
     {
@@ -115,11 +119,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {
         "id": "1jZXBLhmns--"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 4, 'a', 'b']"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p1([0, 1, 2, None, 4, \"a\", \"b\"])"
       ]
@@ -146,7 +161,11 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p2(seq):\n",
-        "    ..."
+        "    result = []\n",
+        "    for isTrueItem in seq:\n",
+        "        if bool(isTrueItem) is True: \n",
+        "            result.append(isTrueItem)\n",
+        "    return result"
       ]
     },
     {
@@ -162,11 +181,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 76,
       "metadata": {
         "id": "yCOW3O09oHV5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 2, 4, 'a', 'b', True]"
+            ]
+          },
+          "execution_count": 76,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2([0, 1, 2, None, 4, \"a\", \"b\", False, True])"
       ]
@@ -184,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 80,
       "metadata": {
         "id": "xTB_tXMTobVs"
       },
@@ -193,7 +223,11 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(seq):\n",
-        "    ..."
+        "    result = []\n",
+        "    for values in seq:\n",
+        "        if values != None and bool(values) is False: \n",
+        "            result.append(values)\n",
+        "    return result"
       ]
     },
     {
@@ -208,11 +242,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 79,
       "metadata": {
         "id": "tWHqPjrXofNi"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, False]"
+            ]
+          },
+          "execution_count": 79,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3([0, 1, 2, None, 4, \"a\", \"b\", False, True])"
       ]
@@ -231,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 90,
       "metadata": {
         "id": "Mhy3u6QKDBWJ"
       },
@@ -240,7 +285,10 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p4(n):\n",
-        "    ..."
+        "    sum = 0\n",
+        "    for i in range(n):\n",
+        "        sum += i\n",
+        "    return sum"
       ]
     },
     {
@@ -255,11 +303,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 82,
       "metadata": {
         "id": "xAHEoxzuoqyO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 82,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(0) should be 0\n",
         "p4(0)"
@@ -267,11 +326,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 87,
       "metadata": {
         "id": "A-5b6g57osqv"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 87,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(1) should also be 0\n",
         "p4(1)"
@@ -279,11 +349,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 91,
       "metadata": {
         "id": "m9TS13UsotoN"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 91,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(2) should be 0+1=1\n",
         "p4(2)"
@@ -291,11 +372,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 92,
       "metadata": {
         "id": "-uoB3IAKoutu"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "45"
+            ]
+          },
+          "execution_count": 92,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p4(10) should be 0+1+2+3+4+5+6+7+8+9=45\n",
         "p4(10)"
@@ -314,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 93,
       "metadata": {
         "id": "1-JbJbiNDPgN"
       },
@@ -323,7 +415,11 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p5(n):\n",
-        "    ..."
+        "    sumExceptMultiples_5 = 0\n",
+        "    for i in range(n):\n",
+        "        if i % 5 != 0:\n",
+        "            sumExceptMultiples_5 += i\n",
+        "    return sumExceptMultiples_5"
       ]
     },
     {
@@ -338,11 +434,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 94,
       "metadata": {
         "id": "-nZbMHZ7rkwo"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 94,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p5(0) should be 0\n",
         "p5(0)"
@@ -350,11 +457,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 95,
       "metadata": {
         "id": "8d-NwdpArqCI"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "execution_count": 95,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# p5(6) should be 1+2+3+4=10 (note 5 skipped)\n",
         "p5(6)"
@@ -373,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 96,
       "metadata": {
         "id": "uWTJJBu2Dapd"
       },
@@ -382,7 +500,13 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p6(dictionaries):\n",
-        "    ..."
+        "    highScore = dictionaries [0]\n",
+        "    for score in dictionaries[1:]:\n",
+        "        if \"score\" in score and \"score\" in highScore:\n",
+        "            if score[\"score\"] > highScore[\"score\"]:\n",
+        "                highScore = score\n",
+        "    return highScore\n",
+        "        "
       ]
     },
     {
@@ -397,11 +521,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 97,
       "metadata": {
         "id": "6rvuO-6UsAo1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'score': 13.1}"
+            ]
+          },
+          "execution_count": 97,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p6([{\"score\": 1},\n",
         "    {\"score\": 13.1},\n",
@@ -422,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "id": "3Sp5OQEImUN_"
       },
@@ -438,7 +573,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 101,
       "metadata": {
         "id": "Rle-GnKwmoFV"
       },
@@ -447,7 +582,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "# sort p7 here\n",
-        "..."
+        "p7 = sorted(p7, key=lambda x: x['c'])"
       ]
     },
     {
@@ -461,11 +596,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 102,
       "metadata": {
         "id": "tbD9BaI5sdFW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 2, 'b': 52, 'c': 123},\n",
+              " {'a': 5, 'b': 52, 'c': 321},\n",
+              " {'a': 4, 'b': 52, 'c': 456},\n",
+              " {'a': 1, 'b': 52, 'c': 513},\n",
+              " {'a': 3, 'b': 52, 'c': 999}]"
+            ]
+          },
+          "execution_count": 102,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p7"
       ]
@@ -483,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 103,
       "metadata": {
         "id": "YEq-hQMUlnLG"
       },
@@ -492,7 +642,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p8(seq):\n",
-        "    ..."
+        "    return sorted(seq, key=lambda x: x['score'])"
       ]
     },
     {
@@ -507,33 +657,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 104,
       "metadata": {
         "id": "5nAyUIwsszXs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 104,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p8([])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 105,
       "metadata": {
         "id": "dR_hzfBas03e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 1}, {'score': 3}]"
+            ]
+          },
+          "execution_count": 105,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p8([{\"score\": 3}, {\"score\": 1}])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 106,
       "metadata": {
         "id": "jxiZMLsqs7X5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 3}, {'score': 5}, {'score': 6}]"
+            ]
+          },
+          "execution_count": 106,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# this input sequence is a tuple, so it does not have a sort method.\n",
         "\n",
@@ -566,7 +749,17 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p9(dictionaries):\n",
-        "    ..."
+        "    #reDicts is a copy of dictionaries so we don't modify the original list\n",
+        "    top_scorers = []\n",
+        "    reDicts = dictionaries[:]\n",
+        "    while reDicts and len(top_scorers) < 5:\n",
+        "        highest_index = 0\n",
+        "        for i in range(1, len(reDicts)):\n",
+        "            if reDicts[i][\"score\"] > reDicts[highest_index][\"score\"]:\n",
+        "                highest_index = i\n",
+        "        top_scorers.append(reDicts[highest_index])\n",
+        "        reDicts.pop(highest_index)\n",
+        "    return top_scorers"
       ]
     },
     {
@@ -581,11 +774,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 112,
       "metadata": {
         "id": "RQwDteRUuPtE"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 0},\n",
+              " {'score': 1},\n",
+              " {'score': 2},\n",
+              " {'score': 3},\n",
+              " {'score': 4},\n",
+              " {'score': 5},\n",
+              " {'score': 6},\n",
+              " {'score': 7},\n",
+              " {'score': 8},\n",
+              " {'score': 9}]"
+            ]
+          },
+          "execution_count": 112,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9_example_input = [{\"score\": i} for i in range(10)]\n",
         "p9_example_input"
@@ -593,11 +806,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 113,
       "metadata": {
         "id": "J6JWdCbpuie5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'score': 9}, {'score': 8}, {'score': 7}, {'score': 6}, {'score': 5}]"
+            ]
+          },
+          "execution_count": 113,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(p9_example_input)"
       ]
@@ -615,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 115,
       "metadata": {
         "id": "XpxH3dGWDux_"
       },
@@ -624,7 +848,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p10(dictionaries, score_function):\n",
-        "    ..."
+        "     return max(dictionaries, key=score_function)"
       ]
     },
     {
@@ -639,22 +863,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 116,
       "metadata": {
         "id": "u_ZFPFEJ4AU1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'score': 5}"
+            ]
+          },
+          "execution_count": 116,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10([{\"score\": 3}, {\"score\": 5}], lambda r: r[\"score\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 119,
       "metadata": {
         "id": "eJYKi6QE4HkR"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'a': 3}"
+            ]
+          },
+          "execution_count": 119,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# note this sorts by negative \"a\"\n",
         "p10([{\"a\": 5}, {\"a\": 3}], lambda r: -r[\"a\"])"
@@ -674,7 +920,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 120,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -694,7 +940,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p11(n):\n",
-        "    ..."
+        "    return math.prod(range(1, n+1))"
       ]
     },
     {
@@ -710,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 126,
       "metadata": {
         "id": "Msv-S8sqEWQn"
       },
@@ -719,7 +965,7 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p12(dictionaries, key):\n",
-        "    ..."
+        "    return {d[key] for d in dictionaries if key in d}\n"
       ]
     },
     {
@@ -747,7 +993,10 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p13(dictionaries, key):\n",
-        "    ..."
+        "    for d in dictionaries:\n",
+        "        if d.get(key) in (\"\", None):\n",
+        "            return d\n",
+        "    return None"
       ]
     },
     {
@@ -787,7 +1036,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p14 = ..."
+        "p14 = 4"
       ]
     },
     {
@@ -826,7 +1075,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p15 = ..."
+        "p15 = 10"
       ]
     },
     {
@@ -849,15 +1098,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 123,
       "metadata": {
         "id": "u1gwOF_uGL_2"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "..."
+        "p16 = 3"
       ]
     },
     {
@@ -878,15 +1126,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "Z_jb-O9nGOJo"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "..."
+        "p17 = 5"
       ]
     },
     {
@@ -902,15 +1149,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "QrC_w0YGGQRZ"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "..."
+        "def p18(n):\n",
+        "    if len(n) >= 18:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False"
       ]
     },
     {
@@ -926,15 +1176,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "aQ7IcY3VGTac"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "..."
+        "def p19(listInput):\n",
+        "    for number in listInput:\n",
+        "        if not (0.5 <= number <= 0.75):\n",
+        "            return False\n",
+        "    return True"
       ]
     },
     {
@@ -959,7 +1212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "vHmndpn0GWed"
       },
@@ -967,7 +1220,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "..."
+        "p20 = 42"
       ]
     }
   ],
@@ -976,7 +1229,8 @@
       "toc_visible": false
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "base",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -989,7 +1243,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.11.7"
     }
   },
   "nbformat": 4,
